force-app/main/default/objects/Date_field_data__c/Date_field_data__c.object-meta.xml
<CustomObject>
    <label>Date field data</label>
    <nameField>
        <displayFormat>DFD-{00000000}</displayFormat>
        <label>Date field data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Fields data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>