force-app/main/default/objects/Date_field_data__c/fields/Date_field_updater__c.field-meta.xml
<CustomField>
    <fullName>Date_field_updater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date field updater</label>
    <type>Checkbox</type>
</CustomField>