force-app/main/default/objects/Date_field_data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Date__c</columns>
    <columns>Current_Month__c</columns>
    <columns>Current_Year__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Date_field_updater__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>